# gpu-ptr

./: .clang-tidy  .clangd  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: tests.yml
cmake/: gpu_arrayConfig.cmake.in  gpu_ptrConfig.cmake.in
include/: gpu_array.hpp  gpu_ptr.hpp  gpu_runtime_api.hpp
test/: CMakeLists.txt  test.cpp
